# black-trees

./: CLAUDE.md  CMakeLists.txt  README.md  game-logic.yaml  main.cpp  project.godot
.claude/: settings.local.json
assets/: house-assets-placeholder.png.import  idle_down_1.png.import  idle_down_2.png.import  player-placeholder.png.import  player_idle.png.import  player_sheet.png.import  shadow-placeholder.png.import  tileset-placeholder.png.import  village_square_tileset.png.import  walk_down_1.png.import  walk_left_1.png.import  walk_left_2.png.import  walk_left_3.png.import  walk_right_1.png.import  walk_right_2.png.import  walk_up_1.png.import  walk_up_2.png.import  walk_up_3.png.import
audio/: village-ambience.mp3.import
core/: BattleSystem.cpp  BattleSystem.h  HealAction.cpp  HealAction.h  SaveSystem.h  WorldState.cpp  WorldState.h  initial.cpp  scene_manager.gd  scene_manager.gd.uid
data/: heal_actions.json  memories.json  regions.json
entities/: Player.cpp  Player.h  Shadow.cpp  Shadow.h
scenes/: battle.tscn  dialogue_box.tscn  exploration.tscn  forest.tscn  hello_world.tscn  home.tscn  main_menu.tscn  village-square.tscn
scripts/: battle.gd  battle.gd.uid  collectible_item.gd  collectible_item.gd.uid  collectible_note.gd  collectible_note.gd.uid  dialogue_box.gd  dialogue_box.gd.uid  exploration.gd  exploration.gd.uid  forest.gd  forest.gd.uid  game_state.gd  game_state.gd.uid  interactable.gd  interactable.gd.uid  main_menu.gd  main_menu.gd.uid  player.gd  player.gd.uid  scene_exit.gd  scene_exit.gd.uid  shadow_interactable.gd  village-square.gd  (+2 more)
(+11 files in other folders)
